fixed r-bloggers link

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -91,7 +91,7 @@
                 
               </p>
               </a>
-            <li class="list-group-item"><a href="http://www.r-blogers.com/" target="blank"><img class="img-circle" src="https://pbs.twimg.com/profile_images/502185985786916864/gkdFh-q7_400x400.png" width="36px" height="36px"> R-Bloggers</a></li>
+            <li class="list-group-item"><a href="https://www.r-bloggers.com/" target="blank"><img class="img-circle" src="https://pbs.twimg.com/profile_images/502185985786916864/gkdFh-q7_400x400.png" width="36px" height="36px"> R-Bloggers</a></li>
             <li class="list-group-item"><a href="http://www.superforecasting.com/" target="blank"><img class="img-circle" src="http://www.sitehere.ru/favicons/favicon-160x160.png" width="36px" height="36px"> Superforecasting in Action</a></li>
             <li class="list-group-item"><a href="http://portalibre.fgv.br/" target="blank"><img class="img-circle" src="https://pbs.twimg.com/profile_images/461230549260980224/nTweues0.png" width="36px" height="36px"> FGV|IBRE</a></li>
             <li class="list-group-item"><a href="http://www.blogdokennedy.com.br/" target="blank"><img class="img-circle" src="/images/k.jpg" width="36px" height="36px"> Blog do Kennedy</a></li>
